--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"> 
+
     <title><%= full_title(yield(:title)) %></title>
     	<%= stylesheet_link_tag "application", media: "all",
                                            "data-turbolinks-track" => true %>
@@ -27,7 +29,7 @@
    <div id ="container">
 	<div id ="content">
 	   	<%= render 'layouts/header' %>  
-	       <%= yield %>
+		<div id ="main_content"  <%= yield %> </div>
 	       <%= render 'layouts/footer' %>
 	</div>
    </div>
