--- a/app/views/ugrad/advising.html.erb
+++ b/app/views/ugrad/advising.html.erb
@@ -1,23 +1,17 @@
-      
-   <!--KA: Uneven columns with image-->
-
+<!--KA: Undergraduate Advising-->
 
   <div class="row">
             <div class="col-lg-12">
 		<p><br>
             </div>
 
-
 <!--KA: Sidebar start-->
 	<div class="col-md-4">
-	  
-  	        <%= render 'layouts/sidebar_ugrad_advising' %>
+		 <%= render 'layouts/sidebar_ugrad_advising' %>
 	 </div>
 <!--KA: Sidebar end-->
 
-
-
-            <div class="col-md-8 no-gutter">
+         <div class="col-md-8 no-gutter">
 
 	 <h2 style="text-align: center;">&nbsp;SIB Undergraduate Advising Office</h2>
 	 <p style="text-align: center;"><em>For quick answers to common questions, check out our <a href="/faqs/advising">FAQ</a> page</em></p>
