ugrad/grad pages, home button, chrome bug fix

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -160,7 +160,8 @@ textarea {
 //-----------Font awesome-ICONS---------------
 
 //KA: The info bullet icon for lists
-.fa-info-circle, 
+.fa-info-circle,
+.fa-lightbulb-o,
 .fa-user  {
     color: #E87722;
     text-shadow: 1px 1px 1px #ccc;
