--- a/app/views/about/departments.html.erb
+++ b/app/views/about/departments.html.erb
@@ -15,7 +15,7 @@
          <div class="col-md-8 no-gutter">
 
 	 <h2 style="text-align: center;">Departments and Programs</h2>
-	 <br><h4 style="text-align: center;">The School of Integrative Biology comprises of three academic departments:</h4>
+	 <h4 style="text-align: center;">The School of Integrative Biology comprises of three academic departments:</h4>
 	 
 <!--Animal Bio-->	
 	 <div class="col-md-4">
@@ -42,8 +42,7 @@
   	<div class="col-lg-12">
 		<hr>
 		<h4>In addition, the school offers or has connections with five interdisciplinary graduate programs: </h4>
-		<br>
-         </div>
+	</div>
 
 <!--Ecology-->
         <div class="col-md-4 ">
@@ -56,7 +55,7 @@
 		<p>Advanced and comprehensive training in ecology, evolutionary biology, and the conservation of biodiversity.</p> 
 	  </div>
 
-	<div class="col-lg-12"><br><hr></div>
+	<div class="col-lg-12"><hr></div>
 
 <!--Neuroscience-->
  	<div class="col-md-4 ">
@@ -69,7 +68,7 @@
 		<p>Studying how the nervous system works, from molecules to brain.</p> 
 	  </div>
 
-	<div class="col-lg-12"><br><hr></div>
+	<div class="col-lg-12"><hr></div>
 
 <!--MST-->
  	<div class="col-md-4 ">
@@ -82,7 +81,7 @@
                 <p>Advanced training for secondary school teachers of biology.</p>
 	  </div>
 
-	<div class="col-lg-12"><br><hr></div>
+	<div class="col-lg-12"><hr></div>
 
 <!--Biology Science-->
  	<div class="col-md-4 ">
@@ -95,7 +94,7 @@
 		<p>Online program designed for individuals who are already certified to teach biology in public schools, specifically middle school general science teachers and high-school biology teachers.</p>
 	  </div>
 
-	<div class="col-lg-12"><br><hr></div>
+	<div class="col-lg-12"><hr></div>
 
 <!--MS Plant BIO-->
  	<div class="col-md-4 ">
