--- a/app/views/about/whyib.html.erb
+++ b/app/views/about/whyib.html.erb
@@ -19,9 +19,9 @@
 		<h4 style="text-align: left;">Research</h4>
 		<p style="text-align: justify;">By any measure, the University of Illinois is one of the top public research universities in the nation.&nbsp; Faculty in Integrative Biology are some of the top researchers in their fields, innovating in areas such as health, climate change, bioenergy, animal behavior, and conservation, to name a few.&nbsp; Undergraduate students can contribute to world-changing innovations as an IB major.&nbsp; Here's what just a few of our faculty are up to:</p>
 	<ul>
-		<p><i class="fa fa-user"></i>&nbsp; <a href="https://sib.illinois.edu/pittendrigh/projects/">Dr. Barry Pittendrigh</a> works to fighting diseases in developing countries by creating simple technology for insect identification. <br><br>
-		<i class="fa fa-user"></i>&nbsp; <a href="http://lab.igb.illinois.edu/ainsworth/welcome">Dr. Lisa Ainsworth</a> is focused on maintaining and improving future agricultural production and global food supply. <br><br>
-		<i class="fa fa-user"></i>&nbsp; <a href="http://www.life.illinois.edu/sears/index.html">Dr. Karen Sears</a> researchs mammalian limb and girdle development with implications of helping diagnose and treat congenital limb malformations in humans. </p><br>
+		<p><i class="fa fa-user"></i>&nbsp; <a href="https://sib.illinois.edu/pittendrigh/projects/">Dr. Barry Pittendrigh</a> works to fighting diseases in developing countries by creating simple technology for insect identification. <br>
+		<i class="fa fa-user"></i>&nbsp; <a href="http://lab.igb.illinois.edu/ainsworth/welcome">Dr. Lisa Ainsworth</a> is focused on maintaining and improving future agricultural production and global food supply. <br>
+		<i class="fa fa-user"></i>&nbsp; <a href="http://www.life.illinois.edu/sears/index.html">Dr. Karen Sears</a> researchs mammalian limb and girdle development with implications of helping diagnose and treat congenital limb malformations in humans. </p>
 	</ul>
 	<p style="text-align: justify;">And see even more about what IB Professors do, visit our <a href="http://sib.illinois.edu/faculty_interviews.htm">faculty interview</a> page.</p><hr>
 
@@ -41,7 +41,7 @@
 
 	<div style="float: right; clear: right; margin: 0.5em 0.5em 0.5em 1.5em; text-align: justify;">
 		<a class="no_underline" href="http://www.sib.illinois.edu/peec/">
-               		<%= image_tag 'sib/vancleave1.jpg',  alt: "courses", size: "280x150" %>
+               		<%= image_tag 'sib/vancleave1.jpg',  alt: "courses", size: "334x146" %>
 	 	</a>
 	</div>
 	<p style="text-align: justify;">In addition to these academic programs, IB recognizes the importance of social ties that form during college and encourages students to participate in student clubs and groups.&nbsp; IB has a club just for IB majors called the <a href="mailto:integrativeillini@gmail.com"> Integrative Illini</a>.&nbsp; Members participate in social, career, and volunteer activities.</p>
