changes to navbar, grad home

--- a/app/views/ugrad/advising.html.erb
+++ b/app/views/ugrad/advising.html.erb
@@ -1,9 +1,7 @@
 <!--KA: Undergraduate Advising-->
 
   <div class="row">
-            <div class="col-lg-12">
-		<p><br>
-            </div>
+            <div class="col-lg-12"><p></div>
 
 <!--KA: Sidebar start-->
 	<div class="col-md-4">
