--- a/app/views/ugrad/options.html.erb
+++ b/app/views/ugrad/options.html.erb
@@ -3,9 +3,7 @@
 
 
   <div class="row">
-            <div class="col-lg-12">
-		<p><br>
-            </div>
+            <div class="col-lg-12"><p></div>
 
 
 <!--KA: Sidebar start-->
@@ -129,7 +127,7 @@
 	<p>Call 333-6774, <a href="http://sib.illinois.edu/advising/scheduler/">make an appointment online</a>, or visit 127 Burrill Hall to discuss these or other options with an IB Advisor in more detail. You can also follow any of the links below for more information from campus or off-campus sources.</p>
 	<ul>
 	<p><i class="fa fa-info-circle"></i>&nbsp; <a href="http://www.careercenter.uiuc.edu">The Career Center</a> 715 S. Wright St. 333-0820<br>
-	  <i class="fa fa-info-circle"></i>&nbsp; <a href="http://www.uiaa.org/careers">UI Alumni Career Center</a> 200 S. Wacker Dr., Chicago 312-575-7830</p>
+	   <i class="fa fa-info-circle"></i>&nbsp; <a href="http://www.uiaa.org/careers">UI Alumni Career Center</a> 200 S. Wacker Dr., Chicago 312-575-7830</p>
 	</ul>
 
 
