--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -63,8 +63,8 @@
             <div class="col-md-3 cal-panel">
                 <div class="panel panel-warning">
                     <div class="panel-heading">
-                        <h4 align = "center" ><i class="fa fa-fw "></i><%= (t.startDate)%></h4>
-			<h6 align = "center" ><i class="fa fa-fw "></i><%= (t.startTime)%></h6>
+                        <h4 align = "center" ><%= (t.startDate)%></h4>
+			<h6 align = "center" ><%= (t.startTime)%></h6>
                     </div>
                     <div class="panel-body fixed-panel">
                         <p><%= t.titleLong %> </p>   
