--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -72,9 +72,9 @@
 	      <ul class="col-md-5 list-unstyled">
 		<li><strong><%= link_to "Prospective", prospective_path %></strong></li>
 		<hr>
-		<li><strong><a  href="#"> Courses -NEW </a></strong></li>
+		<li><strong><%= link_to "Courses-NEW", ugrad_courses_path %></strong></li>
 		<hr>
-		<li><strong><a  href="#"> Honors -NEW </a></strong></li>
+		<li><strong><%= link_to "Honors-NEW", ugrad_honors_path %></strong></li>
 		<hr>
 		<li><strong><%= link_to "Advising", advising_path %></strong></li>
 				      
@@ -92,9 +92,9 @@
 	   <div class="supermenu-content">
 	    <div class="row">
 	       <ul class="col-md-5 list-unstyled">
-		   <li><strong><a  href="#"> Prospective -NEW </a></strong></li>
+   	   	   <li><strong><%= link_to "Prospective-NEW", grad_prospective_path %></strong></li>
 		   <hr>
-	      	   <li><strong><a  href="#"> Courses -NEW </a></strong></li>
+	      	   <li><strong><%= link_to "Courses-NEW", grad_courses_path %></strong></li>
       	       </ul>
            </div>
          </div>
@@ -121,69 +121,6 @@
         </li>
        </ul>
     </li>
-
- <!-- Menu Item-6 -->
-    <li class="dropdown supermenu"><a href="/people" class="dropdown-toggle">Removed</a>
-      <ul class="dropdown-menu">
-	<li>
-	   <div class="supermenu-content">
-	    <div class="row">
-	      <ul class="col-md-5 list-unstyled">
-		 <li><strong><%= link_to "Ugrad-What Can I do with IB?", options_path %></strong></li>
-		<hr>
-		<li><strong><%= link_to "Ugrad-Programs of Study", programs_path %></strong></li>
-		<hr>
-		<li><strong><%= link_to "Ugrad-Special Programs", special_programs_path %></strong></li>
-		<hr>
-		<li><strong><%= link_to "GRAD-Department & Programs", about_depts_path %></strong></li>
-		<hr>
-		<li><strong><%= link_to "GRAD-Grants & Awards", grad_grants_path %></strong></li>
-		<hr>
-		<li><strong><a  href="http://www.grad.illinois.edu/"> GRAD-Support </a></strong></li>
-		<hr>
-		<li><strong><%= link_to "GRAD-News & Features", grad_news_path %></strong></li>
-		<hr>
-  		<li><strong><a  href="#"> Courses- All IB Courses </a></strong></li>
-		  <hr>
-		  <li><strong><a  href="#"> Courses- Advanced Courses By Semester </a></strong></li>
-		  <hr>
-		  <li><strong><a  href="#"> Courses- Advanced Area Courses </a></strong></li>
-		  <hr>
-		  <li><strong><a  href="#"> Courses- Addtional Approved Advanced Courses</a></strong></li>
- 		  <hr>
-		  <li><strong><a  href="#"> Courses- Special Topics Courses</a></strong></li>
-		  <hr>
-		  <li><strong><a  href="#"> Courses- Proficiency Exams </a></strong></li><hr>
-		<li><strong><%= link_to "People-Faculty", people_faculty_path %></strong></li>
-		<hr>
-		<li><strong><%= link_to "People-Staff", people_staff_path %></strong></li>
-		<hr>
-		<li><strong><%= link_to "People-Academics", people_academics_path %></strong></li>
-		<hr>
-		<li><strong><%= link_to "People-Graduate Students", people_grad_students_path %></strong></li>
-		<hr>
-		<li><strong><%= link_to "People-Faculty Interviews", people_faculty_interviews_path %></strong></li>
-		<hr>
-		<li><strong><%= link_to "People-390/490 Faculty", people_faculty_other_path %></strong></li>
-		<hr>
-			<li><strong><%= link_to "About-FAQs", about_faq_path %></strong></li>
-			<hr>
-			<li><strong><%= link_to "About-Why major in IB?", about_whyib_path %></strong></li>
-			<hr>
-			<li><strong><%= link_to "About-Contact Us", about_contact_path %></strong></li>
-			<hr>
-			<li><strong><%= link_to "About-Convocation", about_convocation_path %></strong></li>
-
-
-
-	      </ul>
-           </div>
-         </div>
-        </li>
-       </ul>
-    </li>
-
-
 
 
    </ul>
