--- a/app/views/ugrad/programs.html.erb
+++ b/app/views/ugrad/programs.html.erb
@@ -3,9 +3,7 @@
 
 
   <div class="row">
-            <div class="col-lg-12">
-		<p><br>
-            </div>
+            <div class="col-lg-12"><p></div>
 
 
 <!--KA: Sidebar start-->
@@ -13,8 +11,6 @@
 	      <%= render 'layouts/sidebar_ugrad_programs' %>
 	 </div>
 <!--KA: Sidebar end-->
-
-
 
             <div class="col-md-8">
 		<h2 style="text-align: center;">Undergraduate Programs</h2>
