copy of About in Navbar

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,5 @@
+<!--18-May-2015: Changing the About in Navbar to School of Integrative Biology-->
+
 <header class="header"> 
 
    <div class="container" id="banner"  >
@@ -53,6 +55,9 @@
 			<li><strong><%= link_to "Departments", about_depts_path %></strong></li>
 			<hr>
 			<li><strong><%= link_to "Programs -New", about_depts_path %></strong></li>
+			<hr>
+			<li><strong><%= link_to "Contact Us", about_contact_path %></strong></li>
+
 		      </ul>
 		</div>
 	      </div>
@@ -104,7 +109,7 @@
 
 
  <!-- Menu Item-4 -->
-    <li class="dropdown supermenu"><a href="/people" class="dropdown-toggle">Alumni & Friends</a></li>
+    <li class="dropdown supermenu"><a href="/alumni" class="dropdown-toggle">Alumni & Friends</a></li>
 
 
  <!-- Menu Item-5 -->
